Minden fájl commit main-re való feltöltéshez